style.css
html,
body,
div,
span,
h1,
h2,
h3,
h4,
p,
a {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

img {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}

a {
  color: white;
  text-decoration: none;
}

@font-face {
  font-display: swap;
  font-family: "Parkway Lush";
  src: url("./resources/fonts/parkway-lush.ttf") format("truetype");
}

html,
body {
  height: 100%;
  width: 100%;
}

h1 {
  color: red;
}

body {
  background-image: url("./resources/bg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50%;
  background-color: #05253b;
  color: white;
  flex-direction: column;
  text-align: center;
  font-family: "Poppins", sans-serif;
}

main {
  display: flex;
  flex-direction: row;
  padding: 40px 20px 30px 40px;
  flex: 1;
}

#paragraph-first {
  color: #b5dac7;
  font-size: 20px;
  line-height: 22px;
  margin-bottom: 10px;
}

#paragraph-first {
  font-size: 19px;
  line-height: 21px;
}

footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-image: url("./resources/bandeau-desktop.svg");
  /** background-color: rgba(255, 255, 255, 0.8); **/
  background-position-x: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 81px;
  position: relative;
}

small {
  font-size: 10px;
  transform: rotate(180deg);
  display: block;
  position: absolute;
  left: 10px;
  top: -200px;
  writing-mode: tb-rl;
}

footer > div {
  width: 50%;
}

#logo-wrapper {
  flex: 1;
}

#logo-wrapper img {
  height: 100%;
  vertical-align: middle;
  margin-top: -5%;
  width: 100%;
  max-width: 740px;
}

aside {
  align-self: flex-end;
  width: 150px;
}

aside p {
  font-family: "Parkway Lush";
  font-size: 35px;
  transform: rotate(-15deg);
}

aside > nav a {
  display: block;
  margin-top: 5px;
}

aside > nav a:first-child {
  margin-top: 0;
}

#partners {
  padding: 0 10px;
}

#partners img {
  margin-right: 10px;
}

#partners img:last-child {
  margin-right: 0;
}

.contact p {
  color: #b5dac7;
  font-size: 16px;
}

.contact > div {
  display: inline-block;
}

address {
  font-style: normal;
  font-weight: bold;
}

address a:first-child {
  float: left;
  margin-left: 5px;
}

address a:last-child {
  float: right;
  margin-right: 5px;
}

@media only screen and (min-width: 1084px) {
  .dn-desktop {
    display: none;
  }

  body {
    display: flex;
  }

  article {
    text-align: left;
    width: 270px;
  }
}

@media only screen and (max-width: 1084px) {
  main {
    flex-direction: column;
    padding: 10px;
    height: calc(100vh - 20px);
  }

  #logo-wrapper img {
    position: absolute;
    top: -6%;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    z-index: -1;
  }

  header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
  }

  nav {
    display: flex;
    align-items: center;
    margin-left: 15px;
  }

  nav > a {
    margin-right: 10px;
  }

  nav img {
    display: block;
  }

  .dn-mobile {
    display: none;
  }

  .contact p {
    font-size: 14px;
  }

  small {
    top: auto;
    right: 10px;
    bottom: 20px;
    left: auto;
  }

  article {
    text-align: center;
    padding: 30px 15%;
  }

  #partners {
    width: 100%;
  }
}

@media only screen and (max-width: 555px) {
  nav {
    margin-top: 5px;
  }

  footer {
    min-height: 54px;
  }

  #partners > img {
    height: 25px;
  }
}

